--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Gayatri Home Page</title>
 </head>
-<body>
-    <h1>Welcome to Amrutvahini Collage of Engineering</h1>
+<body bgcolor="yellow">
+    <h1 align="center">Welcome to Amrutvahini Collage of Engineering</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex accusamus dolorem modi, veniam odio nisi illo, cum quos, ipsam quidem ducimus consectetur voluptates quis quam eligendi consequuntur mollitia assumenda?</p>
 </body>
 </html>
