--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayatri Home Page</title>
 </head>
-<body bgcolor="yellow">
-    <h1 align="center">Welcome to Amrutvahini Collage of Engineering</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex accusamus dolorem modi, veniam odio nisi illo, cum quos, ipsam quidem ducimus consectetur voluptates quis quam eligendi consequuntur mollitia assumenda?</p>
+<body bgcolor="sky blue">
+    <h1 align="center"><b>Welcome to Amrutvahini Collage of Engineering</b></h1>
+    <p><h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex accusamus dolorem modi, veniam odio nisi illo, cum quos, ipsam quidem ducimus consectetur voluptates quis quam eligendi consequuntur mollitia assumenda?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae rem est velit corrupti architecto illum quae maxime nihil vero quod modi laudantium, enim culpa facilis sunt, quibusdam porro libero accusantium.</h3></p>
 </body>
 </html>
