--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayatri Home Page</title>
 </head>
-<body bgcolor="sky blue">
+<body bgcolor="pink">
     <h1 align="center"><b>Welcome to Amrutvahini Collage of Engineering</b></h1>
    <h2 bgcolor="yellow" align="center">Gayatri Gaikwad</h2>
    
