--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body bgcolor="pink">
     <h1 align="center"><b>Welcome to Amrutvahini Collage of Engineering</b></h1>
    <h2 bgcolor="yellow" align="center">Gayatri Gaikwad</h2>
-   
-    <p><h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex accusamus dolorem modi, veniam odio nisi illo, cum quos, ipsam quidem ducimus consectetur voluptates quis quam eligendi consequuntur mollitia assumenda?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae rem est velit corrupti architecto illum quae maxime nihil vero quod modi laudantium, enim culpa facilis sunt, quibusdam porro libero accusantium.</h3></p>
+   <center><img src="C:\Users\gayat\Downloads\avcoe_logo"></center>
+    <p><h3>Amrutvahini College of Engineering (AVCOE) in Sangamner, Maharashtra, established in 1983, is a well-regarded autonomous engineering institute permanently affiliated with Savitribai Phule Pune University. Known for quality education, AVCOE offers various B.E. and P.G. programs, holds NAAC 'A+' accreditation, multiple NBA accreditations, and focuses on holistic development with strong industry ties, comprehensive placements, value-added courses like foreign languages (Japanese/German), and excellent infrastructure including state-of-the-art labs and hostels, aiming to groom technically proficient engineers.</h3></p>
 </body>
 </html>
