--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayatri Home Page</title>
 </head>
-<body bgcolor="pink">
+<body bgcolor="yellow">
     <h1 align="center"><b>Welcome to Amrutvahini Collage of Engineering</b></h1>
    <h2 bgcolor="yellow" align="center">AVCOE</h2>
    <center><img src=C:\Users\gayat\Downloads\avcoe_logo.jpg></center>
